# nvidia-digital-twin-pilot

./: .dockerignore  .gitignore  Makefile  README.md  brev-compose-phase4.yml  brev-compose.yml  brev.code-workspace  fastdds_client.xml  fastdds_discovery.xml  fastdds_no_shm.xml  local-compose.yml  local-start.sh  pyproject.toml  run_phase1.sh
dashboard/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  config.ts
dashboard/src/components/ConfigPanel/: ConfigPanel.tsx
dashboard/src/components/FleetStatus/: FleetStatus.tsx
dashboard/src/hooks/: useApi.ts  useWebSocket.ts
dashboard/src/stores/: metricsStore.ts  orderStore.ts  warehouseStore.ts
dashboard/src/types/: forklift.ts  metrics.ts  order.ts  websocket.ts
docs/: 01_brev_setup.md  02_vscode_access.md  03_vscode_isaacsim_smoke_test.md  04_concrete_spray.md  04_developer_workflow.md  05_developer_workflow.md  06_ros2_setup.md  ARCHITECTURE.md  architecture.puml  ros2-dds-debug-status.md
docs/Phase 2/: BREV-IMPLEMENTATION.md  LOCAL-IMPLEMENTATION.md
nvidia-simu-test-main/nvidia-simu-test-main/: .gitignore  INSTALL.md  PHYSICAL_ROBOTS.md  README.md  ROBOT_TUTORIAL.md  ROS2_PLAN.md  VISION_PIPELINE.md
nvidia-simu-test-main/nvidia-simu-test-main/.github/: copilot-instructions.md
nvidia-simu-test-main/nvidia-simu-test-main/scripts/: check_status.sh  deploy_to_instance.sh  launch_streaming.sh  run_tutorial_part3.sh
sim-scripts/: warehouse_scene.py  warehouse_scene_streaming.py
simulations/_template/: README.md  run_sim.sh
simulations/_template/02_core_scripts/: launcher.py
simulations/concrete_spray/: README.md  RUN_DIRECT_CAVE_PREVIEW_V1.bat  RUN_DIRECT_CAVE_PREVIEW_VALIDATE_V1.bat  STARTUP_PROMPT_UPDATED.txt  run_direct_cave_preview_v1.sh  run_direct_cave_preview_validate_v1.sh
simulations/concrete_spray/01_scenes/: boolean Applied ver3.usdc  boolean Applied ver3_calibration.usdc  boolean Applied ver3_preview_particles.usdc
simulations/concrete_spray/02_core_scripts/: shotcrete_direct_cave_preview_launcher_v1.py  shotcrete_direct_cave_preview_v1.py  shotcrete_direct_cave_preview_validate_v1.py  shotcrete_microburst_v16_2_proxy_receiver_exact_field_export.py  shotcrete_one_click_pipeline_v1.py  shotcrete_proxy_to_cave_map_v17_8b_exact_field_import_new_cave_autodetect.py
simulations/concrete_spray/04_current_outputs/: shotcrete_metrics_broad_splat_v16_2_latest.csv  shotcrete_metrics_broad_splat_v16_2_latest.json  shotcrete_metrics_broad_splat_v16_2_latest.txt  shotcrete_proxy_field_v16_2_latest.json  shotcrete_proxy_field_v16_2_latest.txt  shotcrete_proxy_to_cave_map_v17_8b_latest.csv  shotcrete_proxy_to_cave_map_v17_8b_latest.json  shotcrete_proxy_to_cave_map_v17_8b_latest.txt  shotcrete_proxy_to_cave_map_v17_8c_latest.csv  shotcrete_proxy_to_cave_map_v17_8c_latest.json  shotcrete_proxy_to_cave_map_v17_8c_latest.txt
simulations/forklift-warehouse/: README.md
simulations/forklift-warehouse/01_scenes/: scene_assembly.usd  warehouse_clean.usd
simulations/forklift-warehouse/02_core_scripts/: diag_bridge.py  diag_dds.py  diag_dds2.py  diag_dds3.py  diag_twist_check.py  forklift_controller.py  forklift_launcher.py  lidar_sensor_setup.py  lidar_subscriber.py  obstacle_avoidance.py  populate_scene.py  ros2_cmd_bridge.py  setup_physics.py  simplify_warehouse.py
simulations/forklift-warehouse/03_dashboard/: README.md  dashboard.py
simulations/forklift-warehouse/04_helper_scripts/: attach_follow_camera.py  get_forklift_transform.py  get_warehouse_bounding_box.py  get_warehouse_spatial_info.py  inspect_forklift_joints.py  inspect_steer_joint.py  reset_forklift.py  ros2_test_maneuver.py  spawn_path_obstacles.py
simulations/forklift-warehouse/05_reference_milestones/: forklift_controller_pre_mast_calibration_backup.py
smoke_test/: vscode_smoke_test.py
vehicle-controller/: Dockerfile  package.xml  setup.cfg  setup.py
vehicle-controller/vehicle_controller/: forklift_controller_node.py
vehicle-controller/vehicle_controller/config/: nav2_params.yaml
vehicle-controller/vehicle_controller/launch/: multi_forklift.launch.py
warehouse-manager/: Dockerfile  dispatcher.py  main.py  main_phase1.py  models.py  requirements.txt  scenario.py
warehouse-manager/tests/: test_dispatcher.py
warehouse_msgs/: CMakeLists.txt  package.xml
warehouse_msgs/msg/: ForkliftStatus.msg  OrderStatus.msg  TaskAssignment.msg  TaskStatus.msg
warehouse_msgs/srv/: ResetSimulation.srv
web-viewer/: Dockerfile
(+28 files in other folders)
