<?xml version="1.0"?>
<package format="3">
  <name>vehicle_controller</name>
  <version>0.1.0</version>
  <description>Forklift vehicle controller with state machine and Nav2 integration</description>
  <maintainer email="dev@example.com">dev</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>warehouse_msgs</depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
