<?xml version="1.0"?>
<package format="3">
  <name>warehouse_msgs</name>
  <version>0.1.0</version>
  <description>Warehouse Digital Twin message definitions</description>
  <maintainer email="dev@example.com">dev</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
